--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@jiaminghi/c-render",
-  "version": "0.4.3",
-  "author": "JiaMing <743192023@qq.com>",
+  "name": "@east-century/crender",
+  "version": "0.0.1",
+  "author": "fex <fex@hndfsj.com>",
   "description": "Canvas-based vector graphics rendering plugin",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jiaming743/CRender.git"
+    "url": "https://github.com/east-century-fex/crender.git"
   },
   "scripts": {
     "build": "node build/index.js",
@@ -16,7 +16,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jiaming743/CRender/issues"
+    "url": "https://github.com/east-century-fex/crender/issues"
   },
   "keywords": [
     "canvas",
@@ -24,11 +24,11 @@
     "graph",
     "vector"
   ],
-  "homepage": "https://github.com/jiaming743/CRender#readme",
+  "homepage": "https://github.com/east-century-fex/crender#crender",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@jiaminghi/bezier-curve": "*",
-    "@jiaminghi/color": "*",
+    "@east-century/color": "*",
     "@jiaminghi/transition": "*"
   },
   "devDependencies": {
